# ds-rosea-thresholds

./: .env.example  .gitignore  .python-version  README.md  check_slow_onset.py  index.html  main.py  main_asap.py  monitor_asap.py  monitor_ipc.py  monitoring.py  pyproject.toml  requirements.txt  scratch.ipynb  send_email.py  threshold_test.ipynb
.github/workflows/: add-ipc_chd-ds-rosea-ipc(dev).yml  check_slow_onset.yaml  ci.yml  pipeline_rosea-monitoring(slow-onset).yml  publish-book.yml  send_email.yaml
assets/: admin_bounds.parquet  countries.geojson  custom.css  styles.css
book_rosea_thresholds/: 01_visualize_historical_asap_exposure.qmd  03_alert_system_comparison.qmd  04_asap_threshold_rps.qmd  _publish.yml  _quarto.yml  custom.css  index.qmd  references.bib  references.qmd  summary.qmd
data/: current.csv  previous.csv
examples/: explore_asap.py  historical_ipc.py
exploration/asap/: 01_visualize_historical_asap_exposure.qmd
scripts/: filter_warnings.py  generate_analysis_dataset.py  test_real_population.py  test_threshold_analysis.py
scripts/asap/: README.md  asap_readme.md  extract_worldpop.js  filter_warnings.py  generate_analysis_dataset.py  main_asap.py  run_alert_system.py  run_enhanced_alerts.py  test_real_population.py  test_threshold_analysis.py
src/: azure_blob.py  config.py  constants.py  data_processor.py  listmonk.py  plot.py  utils.py
src/asap/: __init__.py  alert_system.py  asap_warning_exposure.py  azure_config.py  blob_utils.py  config.py  enhanced_alert_system.py  threshold_analyzer.py
src/datasources/: asap.py  ipc.py
